--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,4 +13,110 @@ a {
 
 * {
   box-sizing: border-box;
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.left-menu-bg {
+  position: absolute;
+    width: 19.5em;
+    height: 5.75em;
+    left: 0;
+    z-index: 1;
+    background-image: url(/images/top_left.svg);
+}
+
+.center-menu-bg {
+  position: absolute;
+    background-repeat: repeat;
+    width: 100%;
+    height: 5.75em;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 0;
+    background-image: url(/images/top_center.svg);
+}
+
+.right-menu-bg {
+  position: absolute;
+    width: 19.5em;
+    height: 5.75em;
+    right: 0;
+    z-index: 1;
+    background-image: url(/images/top_right.svg);
+}
+
+.desktop-menu-container {
+    position: absolute;
+    top: -3em;
+    align-items: normal;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    height: 9.6em;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto!important;
+    z-index: 2;
+}
+
+.desktop-bg-container {
+  position: relative;
+    height: 5.75em;
+    width: 100%;
+}
+
+.desktop-logo {
+  position: absolute;
+    top: 45%;
+}
+
+.main-container {
+  background-image: url(/images/news/bg_news.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-color: #3b2418;
+}
+
+.news-header-container {
+  background-image: url(/images/news/news-header.svg);
+  background-repeat: no-repeat;
+  width: 62.6rem;
+  height: 11.3rem;
+  margin: 0rem 0 1rem;
+  display: flex;
+  transform: translateX(-6.4rem);
+  transform: translate(-6.4rem, -3rem);
+  flex-direction: column;
+  justify-content: center;
+}
+
+.news-header-container h1 {
+  text-align: center;
+  font-family: adorn-condensed-sans,sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #f7ded2;
+}
+
+.news-header-container p {
+  font-size: 1.5rem;
+  margin: -0.6rem 0 0;
+  text-align: center;
+    font-family: adorn-condensed-sans,sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #f7ded2;
+}
+
+.footer-container {
+  background-color: #261209;
+}
+
+.news-container {
+  background-color: #170c07;
 }
