--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,7 +77,7 @@ a {
 
 .main-container {
   background-image: url(/images/news/bg_news.jpg);
-  height: 100vh;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-color: #3b2418;
 }
@@ -85,30 +85,25 @@ a {
 .news-header-container {
   background-image: url(/images/news/news-header.svg);
   background-repeat: no-repeat;
-  width: 62.6rem;
-  height: 11.3rem;
-  margin: 0rem 0 1rem;
+  width: 55em;
+  height: 6rem;
   display: flex;
-  transform: translate(-4rem, -2rem);
+  transform: translate(-0.4em, -2rem);
+  margin-bottom: -1rem;
   flex-direction: column;
   justify-content: center;
+  max-width: 104%;
 }
 
 .news-item-container {
   background-image: url(/images/news/item_header.svg);
   background-repeat: no-repeat;
-  width: calc(18.75rem* 3.17);
-  height: calc(3.8125rem* 3.2);
+  width: calc(16rem* 3.17);
+  max-width: 104%;
+  height: auto;
   margin: 0 0 1rem;
-  padding: 0 3rem 0 2.5rem;
-  transform: translateX(-2.5rem);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  -webkit-transition: .1s;
+  transform: translateX(-0.4rem);
   transition: .1s;
-  -webkit-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out;
 }
 
@@ -144,4 +139,28 @@ a {
 
 .news-container {
   background-color: #170c07;
+  width: 50em;
+  max-width: 90%;
+}
+
+@media screen and (min-width:1024px) {
+  .news-container {
+    width: 57.4rem;
+  }
+  .news-header-container {
+    width: 62.6rem;
+    height: 11.3rem;
+    transform: translate(-3rem, -2rem);
+    max-width: none;
+  }
+  .news-item-container {
+    width: calc(18.75rem* 3.17);
+    height: calc(3.8125rem* 3.2);
+    max-width: none;
+    margin: 0 0 1rem;
+    transform: translateX(-1.5rem);
+    transition: .3s;
+    transition-timing-function: ease-in-out;
+  }
+
 }
