--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,10 +140,12 @@ nav {
 }
 
 .main-container {
-  background-image: url(/images/news/bg_news.jpg);
+  background-image: url(/images/news/bg_generic.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-color: #3b2418;
+  background-position: 50%;
+  background-size: cover;
 }
 
 .news-header-container {
@@ -226,6 +228,12 @@ nav {
     transform: translateX(-1.5rem);
     transition: 0.3s;
     transition-timing-function: ease-in-out;
+  }
+
+  .main-container {
+    background-image: url(/images/news/bg_news.jpg);
+    background-position: 0 0;
+    background-size: auto;
   }
 }
 
